<resources>
    <string name="app_name">TallyUp</string>
    <string name="welcome_to">Welcome to</string>
    <string name="tally_up">Tally Up</string>
    <string name="simply_ask">Simply Ask.</string>
    <string name="what_is_this">What is This?</string>
    <string name="account_creation_desc">Account creation is optional. This allows you to sync data across devices</string>
    <string name="sign_up">Sign Up</string>
    <string name="take_poll">Take Poll</string>
    <string name="create_new_poll">Create New Poll</string>
    <string name="multi_select">Multi-Select</string>
    <string name="version">Version</string>
    <string name="developers">Developers</string>
    <string name="dev_names">Jaxon Wright\nKent Sinclair</string>
    <string name="libraries">AppIntro by Paolo Rotolo\nButterknife by Jake Wharton\nFirebase by Google\nVolley by Google\nShortbread by Matthias Robbers\nMaterialTapTargetPrompt by Samuel Wall</string>
    <string name="about">About</string>
    <string name="app_code">wb975</string>
    <string name="done">DONE</string>
    <string name="winner">WINNER</string>

    <string-array name="choice_types">
        <item>Plain Text</item>
        <item>Location</item>
        <!--<item>Movie</item>-->
    </string-array>
</resources>
